<resources>
    <string name="app_name">Patrol Watch</string>
    <string name="plane_image">Plane Image</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="verification_description_text">We will send you an One Time Password on this number for verification</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="next">Next</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="dummy_string">Please enter the OTP sent to +91 1234567890</string>
    <string name="verify">Verify</string>
    <string name="back_button">Back Button</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign Out</string>
    <string name="more_options">More Options</string>
    <string name="patrolling_points">Patrolling Points</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="start_sharing_location">Start Sharing Location</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
</resources>